@@ -224,8 +224,7 @@ XFAIL_TESTS = \
 	tests/delhunk5/run-test \
 	tests/delhunk6/run-test \
 	tests/trimlast1/run-test \
-	tests/trimlast2/run-test \
-	tests/fullheader1/run-test
+	tests/trimlast2/run-test
 
 distclean-local:
 	-rm -rf $(top_builddir)/test-arena
