@@ -1,5 +1,8 @@
 2014-04-14  Tim Waugh  <twaugh@redhat.com>
 
+	* src/filterdiff.c: Handle git extended headers.
+	* Makefile.am: The fullheader1 test case should now pass.
+
 	* tests/lsdiff6/run-test: Fixed typo.
 	* tests/fullheader1/run-test: Fixed typo.
 
